syntax = "proto3";

package gitserver.v1;

option go_package = "github.com/sourcegraph/sourcegraph/internal/gitserver/v1";

service GitserverService {
  rpc Exec(ExecRequest) returns (stream ExecResponse) {}
}

message ExecRequest {
  string repo = 1;
  string ensure_revision = 2;
  repeated string args = 3;
  bytes stdin = 4;
  bool no_timeout = 5;
}

message ExecResponse {
  bytes data = 1;
}

message NotFoundPayload {
  string repo = 1;
  bool clone_in_progress = 2;
  string clone_progress = 3;
}

message ExecStatusPayload {
  int32 status_code = 1;
  string stderr = 2;
}
